--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -23,15 +23,10 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/button1"
         android:layout_toLeftOf="@+id/button1"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_toLeftOf="@+id/button2"
-        android:text="Button" />
+        android:text="@string/number"
+        android:width="75dp"
+        android:height="48dp"
+        android:textColor="@color/grey" />
 
     <Button
         android:id="@+id/button4"
@@ -39,15 +34,10 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/button1"
         android:layout_toRightOf="@+id/button1"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button4"
-        android:layout_toRightOf="@+id/button4"
-        android:text="Button" />
+        android:text="@string/number"
+        android:width="75dp"
+        android:height="48dp"
+        android:textColor="@color/grey" />
 
     <Button
         android:id="@+id/button6"
@@ -55,7 +45,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:text="Button" />
+        android:text="@string/number"
+        android:width="75dp"
+        android:height="48dp"
+        android:textColor="@color/grey" />
 
     <Button
         android:id="@+id/button7"
@@ -63,7 +56,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:text="Button" />
+        android:text="@string/number"
+        android:width="75dp"
+        android:height="48dp"
+        android:textColor="@color/grey" />
 
     <Button
         android:id="@+id/button8"
@@ -71,7 +67,10 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/button3"
         android:layout_alignLeft="@+id/button6"
-        android:text="Button" />
+        android:text="@string/number"
+        android:width="75dp"
+        android:height="48dp"
+        android:textColor="@color/grey" />
 
     <Button
         android:id="@+id/button9"
@@ -79,7 +78,10 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/button5"
         android:layout_alignRight="@+id/button7"
-        android:text="Button" />
+        android:text="@string/number"
+        android:width="75dp"
+        android:height="48dp"
+        android:textColor="@color/grey" />
 
     <Button
         android:id="@+id/button11"
@@ -87,7 +89,11 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button6"
         android:layout_below="@+id/button10"
-        android:text="Button" />
+        android:text="@string/number"
+        android:textColor="@color/grey"
+        android:width="75dp"
+        android:height="48dp"
+        android:visibility="visible" />
 
     <Button
         android:id="@+id/button12"
@@ -95,7 +101,10 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/button7"
         android:layout_below="@+id/button10"
-        android:text="Button" />
+        android:text="@string/number"
+        android:width="75dp"
+        android:height="48dp"
+        android:textColor="@color/grey" />
 
     <Button
         android:id="@+id/button10"
@@ -105,5 +114,45 @@
         android:layout_toLeftOf="@+id/button4"
         android:text="Button"
         android:visibility="invisible" />
+
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button2"
+        android:layout_toLeftOf="@+id/button2"
+        android:visibility="invisible" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button9"
+        android:layout_toLeftOf="@+id/progressBar1"
+        android:text="@string/number"
+        android:width="75dp"
+        android:height="48dp"
+        android:textColor="@color/grey" />
+
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/button4"
+        android:layout_toRightOf="@+id/button4"
+        android:visibility="invisible" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/progressBar2"
+        android:layout_toRightOf="@+id/progressBar2"
+        android:text="@string/number"
+        android:width="75dp"
+        android:height="48dp"
+        android:textColor="@color/grey" />
 
 </RelativeLayout>
