All the button functions work

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:height="48dp"
         android:text="@string/number"
         android:textColor="@color/grey"
+        android:onClick="eight"
         android:width="75dp" />
 
     <Button
@@ -38,6 +39,7 @@
         android:height="48dp"
         android:text="@string/number"
         android:textColor="@color/grey"
+        android:onClick="nine"
         android:width="75dp" />
 
     <Button
@@ -49,6 +51,7 @@
         android:height="48dp"
         android:text="@string/number"
         android:textColor="@color/grey"
+        android:onClick="two"
         android:width="75dp" />
 
     <Button
@@ -60,6 +63,7 @@
         android:height="48dp"
         android:text="@string/number"
         android:textColor="@color/grey"
+        android:onClick="five"
         android:width="75dp" />
 
     <Button
@@ -71,6 +75,7 @@
         android:height="48dp"
         android:text="@string/number"
         android:textColor="@color/grey"
+        android:onClick="three"
         android:width="75dp" />
 
     <Button
@@ -82,6 +87,7 @@
         android:height="48dp"
         android:text="@string/number"
         android:textColor="@color/grey"
+        android:onClick="six"
         android:width="75dp" />
 
     <Button
@@ -94,6 +100,7 @@
         android:text="@string/number"
         android:textColor="@color/grey"
         android:visibility="visible"
+        android:onClick="one"
         android:width="75dp" />
 
     <Button
@@ -105,6 +112,7 @@
         android:height="48dp"
         android:text="@string/number"
         android:textColor="@color/grey"
+        android:onClick="four"
         android:width="75dp" />
 
     <Button
@@ -134,6 +142,7 @@
         android:height="48dp"
         android:text="@string/number"
         android:textColor="@color/grey"
+        android:onClick="seven"
         android:width="75dp" />
 
     <ProgressBar
@@ -154,6 +163,7 @@
         android:height="48dp"
         android:text="@string/number"
         android:textColor="@color/grey"
+        android:onClick="zero"
         android:width="75dp" />
 
     <Button
@@ -163,6 +173,7 @@
         android:layout_alignRight="@+id/button2"
         android:layout_centerVertical="true"
         android:text="@string/add"
+        android:onClick="add"
         android:textColor="@color/white" />
 
     <Button
@@ -172,6 +183,7 @@
         android:layout_alignLeft="@+id/button4"
         android:layout_centerVertical="true"
         android:text="@string/sub"
+        android:onClick="sub"
         android:textColor="@color/white" />
     
     <Button
@@ -181,6 +193,7 @@
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/button17"
         android:text="@string/mult" 
+        android:onClick="mult"
         android:textColor="@color/white" />
 
     <Button
@@ -190,6 +203,7 @@
         android:layout_below="@+id/button17"
         android:layout_centerHorizontal="true"
         android:text="@string/div"
+        android:onClick="div"
         android:textColor="@color/white" />
 
     
@@ -202,6 +216,16 @@
         android:layout_centerVertical="true"
         android:text="@string/number" 
         android:height="48dp"
+        android:onClick="enter"
         android:width="75dp" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/answer"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
